--- a/google/prototype/img/run3/web/index.html
+++ b/google/prototype/img/run3/web/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Plot: The impact of vaccines</title>
+<title>Ensemble Operator Prototype Experiments</title>
 <link rel="stylesheet" type="text/css" href="./inspector.css">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
